# BoostGatewayTankClient

./: .gitignore  CMakeLists.txt  README.md
cmake/: BoostGatewaySdk.cmake
docs/: architecture.md  client-deployment.md  packaging.md  production-roadmap.md  protocol.md  server-integration.md  third-party-assets.md
scripts/: configure-local.sh  package-client.sh  run-headless-gate.sh  run-live-gate.py  run-live-gate.sh  run-local.sh  verify-client-local.sh  version-manifest.json.in
src/app/: main.cpp
src/core/: AppConfig.cpp  AppConfig.h  ClientProfile.cpp  ClientProfile.h  ClientState.h  Diagnostics.h  Logger.cpp  Logger.h
src/sdk/: GatewayClient.cpp  GatewayClient.h
src/tank/: TankProtocol.cpp  TankProtocol.h  TankWorldModel.h
src/ui/: BattleWidget.cpp  BattleWidget.h  DiagnosticsWidget.cpp  DiagnosticsWidget.h  LeaderboardWidget.cpp  LeaderboardWidget.h  LobbyWidget.cpp  LobbyWidget.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  MatchmakingWidget.cpp  MatchmakingWidget.h  ReplayWidget.cpp  ReplayWidget.h  RoomWidget.cpp  RoomWidget.h  SettingsWidget.cpp  SettingsWidget.h
tests/: qt_ui_smoke_test.cpp  tank_headless_gate.cpp  tank_protocol_smoke_test.cpp  tank_ui_flow_test.cpp
